results/e08d33a536246498adad9205439ff7a1/err_code.txt
  File "./pyfile.py", line 18
    runitem = MCMCWrapper(emcee, m,c, x, , sigma_gauss, [object Object], 1000, 1000, 100, 2, {errval}, fanatapan@yahoo.co.uk, e08d33a536246498adad9205439ff7a1, {modelStrings},   argslist = (x, 0.65, data)
                                         ^
SyntaxError: invalid syntax
